--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <img src="./img.webp" alt="img">
 
-<input id="result-number" class="result-number" type="number" readonly>
+    <p class="result-number">00</p>
 
     <h1>Sortear um número</h1>
     <div class="minEmax">
